[gd_scene load_steps=11 format=2]

[ext_resource path="res://BenBonk Sprites/BenBonk Tilemap Minimized.png" type="Texture" id=1]
[ext_resource path="res://BenBonk Sprites/bulky-pixels/bulkypixels/BULKYPIX.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=4]

[sub_resource type="TileSet" id=1]
0/name = "BenBonk Tilemap Minimized.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 96, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "BenBonk Tilemap Minimized.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 96, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "BenBonk Tilemap Minimized.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 16, 16, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 29
outline_size = 2
outline_color = Color( 1, 0.811765, 0.0666667, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
outline_size = 2
outline_color = Color( 0.129412, 0.623529, 0.0588235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
outline_size = 2
outline_color = Color( 0.909804, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Settings" parent="." instance=ExtResource( 4 )]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, -2147483648, 0, 1, -2147483648, 0, 2, -2147483648, 0, 3, -2147483648, 0, 4, -2147483648, 0, 5, -2147483648, 0, 6, -2147483648, 0, 7, -2147483648, 0, 8, -2147483648, 0, 9, -2147483648, 0, 10, -2147483648, 0, 11, -2147483648, 0, 12, -2147483648, 0, 13, -2147483648, 0, 14, -2147483648, 0, 15, -2147483648, 0, 16, -2147483648, 0, 17, -2147483648, 0, 18, -2147483648, 0, 19, -2147483648, 0, 20, -2147483648, 0, 21, -2147483648, 0, 65536, -2147483648, 0, 65537, -2147483648, 0, 65538, -2147483648, 0, 65539, -2147483648, 0, 65540, -2147483648, 0, 65541, -2147483648, 0, 65542, -2147483648, 0, 65543, -2147483648, 0, 65544, -2147483648, 0, 65545, -2147483648, 0, 65546, -2147483648, 0, 65547, -2147483648, 0, 65548, -2147483648, 0, 65549, -2147483648, 0, 65550, -2147483648, 0, 65551, -2147483648, 0, 65552, -2147483648, 0, 65553, -2147483648, 0, 65554, -2147483648, 0, 65555, -2147483648, 0, 65556, -2147483648, 0, 65557, -2147483648, 0, 131072, -2147483648, 0, 131073, -2147483648, 0, 131074, -2147483648, 0, 131075, -2147483648, 0, 131076, -2147483648, 0, 131077, -2147483648, 0, 131078, -2147483648, 0, 131079, -2147483648, 0, 131080, -2147483648, 0, 131081, -2147483648, 0, 131082, -2147483648, 0, 131083, -2147483648, 0, 131084, -2147483648, 0, 131085, -2147483648, 0, 131086, -2147483648, 0, 131087, -2147483648, 0, 131088, -2147483648, 0, 131089, -2147483648, 0, 131090, -2147483648, 0, 131091, -2147483648, 0, 131092, -2147483648, 0, 131093, -2147483648, 0, 196608, -2147483648, 0, 196609, -2147483648, 0, 196610, -2147483648, 0, 196611, -2147483648, 0, 196612, -2147483648, 0, 196613, -2147483648, 0, 196614, -2147483648, 0, 196615, -2147483648, 0, 196616, -2147483648, 0, 196617, -2147483648, 0, 196618, -2147483648, 0, 196619, -2147483648, 0, 196620, -2147483648, 0, 196621, -2147483648, 0, 196622, -2147483648, 0, 196623, -2147483648, 0, 196624, -2147483648, 0, 196625, -2147483648, 0, 196626, -2147483648, 0, 196627, -2147483648, 0, 196628, -2147483648, 0, 196629, -2147483648, 0, 262144, -2147483648, 0, 262145, -2147483648, 0, 262146, -2147483648, 0, 262147, -2147483648, 0, 262148, -2147483648, 0, 262149, -2147483648, 0, 262150, -2147483648, 0, 262151, -2147483648, 0, 262152, -2147483648, 0, 262153, -2147483648, 0, 262154, -2147483648, 0, 262155, -2147483648, 0, 262156, -2147483648, 0, 262157, -2147483648, 0, 262158, -2147483648, 0, 262159, -2147483648, 0, 262160, -2147483648, 0, 262161, -2147483648, 0, 262162, -2147483648, 0, 262163, -2147483648, 0, 262164, -2147483648, 0, 262165, -2147483648, 0, 327680, -2147483648, 0, 327681, -2147483648, 0, 327682, -2147483648, 0, 327683, -2147483648, 0, 327684, -2147483648, 0, 327685, -2147483648, 0, 327686, -2147483648, 0, 327687, -2147483648, 0, 327688, -2147483648, 0, 327689, -2147483648, 0, 327690, -2147483648, 0, 327691, -2147483648, 0, 327692, -2147483648, 0, 327693, -2147483648, 0, 327694, -2147483648, 0, 327695, -2147483648, 0, 327696, -2147483648, 0, 327697, -2147483648, 0, 327698, -2147483648, 0, 327699, -2147483648, 0, 327700, -2147483648, 0, 327701, -2147483648, 0, 393216, -2147483648, 0, 393217, -2147483648, 0, 393218, -2147483648, 0, 393219, -2147483648, 0, 393220, -2147483648, 0, 393221, -2147483648, 0, 393222, -2147483648, 0, 393223, -2147483648, 0, 393224, -2147483648, 0, 393225, -2147483648, 0, 393226, -2147483648, 0, 393227, -2147483648, 0, 393228, -2147483648, 0, 393229, -2147483648, 0, 393230, -2147483648, 0, 393231, -2147483648, 0, 393232, -2147483648, 0, 393233, -2147483648, 0, 393234, -2147483648, 0, 393235, -2147483648, 0, 393236, -2147483648, 0, 393237, -2147483648, 0, 458752, -2147483648, 0, 458753, -2147483648, 0, 458754, -2147483648, 0, 458755, -2147483648, 0, 458756, -2147483648, 0, 458757, -2147483648, 0, 458758, -2147483648, 0, 458759, -2147483648, 0, 458760, -2147483648, 0, 458761, -2147483648, 0, 458762, -2147483648, 0, 458763, -2147483648, 0, 458764, -2147483648, 0, 458765, -2147483648, 0, 458766, -2147483648, 0, 458767, -2147483648, 0, 458768, -2147483648, 0, 458769, -2147483648, 0, 458770, -2147483648, 0, 458771, -2147483648, 0, 458772, -2147483648, 0, 458773, -2147483648, 0, 524288, -2147483648, 0, 524289, -2147483648, 0, 524290, -2147483648, 0, 524291, -2147483648, 0, 524292, -2147483648, 0, 524293, -2147483648, 0, 524294, -2147483648, 0, 524295, -2147483648, 0, 524296, -2147483648, 0, 524297, -2147483648, 0, 524298, -2147483648, 0, 524299, -2147483648, 0, 524300, -2147483648, 0, 524301, -2147483648, 0, 524302, -2147483648, 0, 524303, -2147483648, 0, 524304, -2147483648, 0, 524305, -2147483648, 0, 524306, -2147483648, 0, 524307, -2147483648, 0, 524308, -2147483648, 0, 524309, -2147483648, 0, 589824, -2147483648, 0, 589825, -2147483648, 0, 589826, -2147483648, 0, 589827, -2147483648, 0, 589828, -2147483648, 0, 589829, -2147483648, 0, 589830, -2147483648, 0, 589831, -2147483648, 0, 589832, -2147483648, 0, 589833, -2147483648, 0, 589834, -2147483648, 0, 589835, -2147483648, 0, 589836, -2147483648, 0, 589837, -2147483648, 0, 589838, -2147483648, 0, 589839, -2147483648, 0, 589840, -2147483648, 0, 589841, -2147483648, 0, 589842, -2147483648, 0, 589843, -2147483648, 0, 589844, -2147483648, 0, 589845, -2147483648, 0, 655360, -2147483648, 0, 655361, -2147483648, 0, 655362, -2147483648, 0, 655363, -2147483648, 0, 655364, -2147483648, 0, 655365, -2147483648, 0, 655366, -2147483648, 0, 655367, -2147483648, 0, 655368, -2147483648, 0, 655369, -2147483648, 0, 655370, -2147483648, 0, 655371, -2147483648, 0, 655372, -2147483648, 0, 655373, -2147483648, 0, 655374, -2147483648, 0, 655375, -2147483648, 0, 655376, -2147483648, 0, 655377, -2147483648, 0, 655378, -2147483648, 0, 655379, -2147483648, 0, 655380, -2147483648, 0, 655381, -2147483648, 0, 720896, -2147483648, 0, 720897, -2147483648, 0, 720898, -2147483648, 0, 720899, -2147483648, 0, 720900, -2147483648, 0, 720901, -2147483648, 0, 720902, -2147483648, 0, 720903, -2147483648, 0, 720904, -2147483648, 0, 720905, -2147483648, 0, 720906, -2147483648, 0, 720907, -2147483648, 0, 720908, -2147483648, 0, 720909, -2147483648, 0, 720910, -2147483648, 0, 720911, -2147483648, 0, 720912, -2147483648, 0, 720913, -2147483648, 0, 720914, -2147483648, 0, 720915, -2147483648, 0, 720916, -2147483648, 0, 720917, -2147483648, 0, 786432, -2147483648, 0, 786433, -2147483648, 0, 786434, -2147483648, 0, 786435, -2147483648, 0, 786436, -2147483648, 0, 786437, -2147483648, 0, 786438, -2147483648, 0, 786439, -2147483648, 0, 786440, -2147483648, 0, 786441, -2147483648, 0, 786442, -2147483648, 0, 786443, -2147483648, 0, 786444, -2147483648, 0, 786445, -2147483648, 0, 786446, -2147483648, 0, 786447, -2147483648, 0, 786448, -2147483648, 0, 786449, -2147483648, 0, 786450, -2147483648, 0, 786451, -2147483648, 0, 786452, -2147483648, 0, 786453, -2147483648, 0 )

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 1053.0
margin_bottom = 627.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Margin"]
margin_right = 1053.0
margin_bottom = 627.0

[node name="VBox" type="VBoxContainer" parent="Margin/Center"]
margin_left = 193.0
margin_top = 254.0
margin_right = 859.0
margin_bottom = 373.0

[node name="Title" type="Label" parent="Margin/Center/VBox"]
margin_right = 666.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Slimes 'n Spikes"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explanation" type="Label" parent="Margin/Center/VBox"]
margin_top = 34.0
margin_right = 666.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "Made in 72 hours for the BenBonk Game Jam with the 
theme of \"Trust No One\".  Do you trust this game?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Margin/Center/VBox"]
margin_top = 75.0
margin_right = 666.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Play" type="Button" parent="Margin/Center/VBox/HBox"]
margin_right = 331.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Trust"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Margin/Center/VBox/HBox"]
margin_left = 335.0
margin_right = 666.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "Don't Trust"

[node name="Version" type="Label" parent="Margin/Center/VBox"]
margin_top = 102.0
margin_right = 666.0
margin_bottom = 119.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 6 )
text = "V 1.0.0"
[connection signal="back" from="Settings" to="." method="_on_Settings_back"]
[connection signal="pressed" from="Margin/Center/VBox/HBox/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Margin/Center/VBox/HBox/Settings" to="." method="_on_Settings_pressed"]
